Merged PR 12784: Merged PR 12758: endpoint getAffiliationDebts
Merged PR 12758: endpoint getAffiliationDebts

# [NGM-6369](https://acelerabga.atlassian.net/browse/NGM-6369) - [BFF] Creación de servicio para la obtención de deudas de un servicio afiliado

endpoint para obtener las deudas de un servicio

## Cambios

- Se agregó el controlador en PaymentServicesController
- Se agregó el servicio en PaymentServicesService
- Se agregó el proveedor en PaymentServicesProvider
- Se agregaron y modificaron los test

Cherry-picked from commit `8853c426`.